(library
  (name legends)
  (modules
    Legends
  )
)

(test
  (name tests)
  (libraries
    alcotest
    legends
  )
  (modules
    Tests
  )
)

(rule
  (targets
     answer.ml
  )
  (deps
     build_anwser.bash
  )
  (action (run ./build_anwser.bash %{dep:legends.ml} %{targets}))
)

(executable
  (name sort_cards)
  (modules sort_cards)
  (libraries
    legends
  )
  (preprocess
    (pps
      ppx_blob
    )
  )
  (preprocessor_deps
     (file cards.txt)
  )
)

(executable
  (name answer)
  (modules
    Answer
  )
)

(alias
  (name default)
  (deps
    legends.a
    sort_cards.exe
    answer.exe
  )
)
